@@ -1,6 +1,6 @@
 """
 XGngeo: a frontend for Gngeo in GTK ^^.
-Copyleft 2003, 2004, 2005 Choplair-network
+Copyleft 2003, 2004, 2005, 2006 Choplair-network
 $Id$
 
 This program is free software; you can redistribute it and/or
@@ -17,58 +17,53 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 """
-import os
+import os.path
 from re import match
 
 class History:
 	def __init__(self):
-		self.path = os.path.expanduser("~/.gngeo/history")
+		self.path = os.path.expanduser("~/.xgngeo/history")
 		self.list = []
 
 	def getList(self,size):
+		"""Getting content of the Rom History file as a list
+		(which also indicates whether each Rom currenlty
+		exists on the file system)."""
+		
 		if os.path.isfile(self.path):
-			file = open(self.path,"r") #Open
-			content = file.readlines() #Read
-			file.close() #And close
+			file = open(self.path,"r") #Opening.
+			content = file.readlines() #Reading.
+			file.close() #And closing. :p
 
 			for line in content[:size]:
 				plop = match('"(.*)" (.*)',line)
-				if plop: self.list.append((plop.group(1),plop.group(2)))
+				location = plop.group(2)
+				if plop: self.list.append((plop.group(1),location,os.path.exists(location)))
 
 		return self.list
 
-	def add(self,name,location,size):
-		already = False
-		i,j = 0,0
-
-		#Check if the game is already on the list.
+	def addRom(self,name,location,size):
+		"""Adding a new Rom to the list, with duplicate entries prevention."""
+		
+		#Popping the Rom out of the list if already mentioned (similar path).
+		i=0
 		for x in self.list[:size]:
-			if x[1]==location: already=True; j=i; break
+			if x[1]==location: self.list.pop(i)
 			i+=1
 
-		if already:
-			#Pull off the others and move it to the first place.
-			da_item = self.list[j]
+		#Prepending it to the recent Rom list (indicating the file exists).
+		self.list.insert(0,(name,location,True))
 
-			i=1
-			for val in self.list[:j]:
-				self.list[i] = val
-				i+=1
-
-			self.list[0] = da_item
-		else:	#Prepend to the recent rom list.
-			self.list.insert(0,(name,location))
-
-		#Remove any extra item.
+		#Removing any extra item.
 		self.list = self.list[:size]
 
-		#Updating file.
+		#Updating Rom History file.
 		content = ""
 		for line in self.list:
 			content += '"%s" %s\n' % (line[0],line[1])
 
-		file = open(self.path,"w") #Open (create if doesn't exist)
-		file.write(content) #Write
-		file.close() #And close.
+		file = open(self.path,"w") #Opening (creating if doesn't exist)
+		file.write(content) #Writing.
+		file.close() #And closing. :p
 
 		return self.list
